[package]
name = "bc_p2p"
version = "0.1.0"
authors = ["corihle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
libp2p = "0.18.1"
async-std = "1.5.0"
env_logger = "0.7.1"
chrono = "0.4.11"

# cit_manager
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.112", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.55"
anyhow = "1.0.31"
serde_derive = "1.0.114"
combinations = "0.1.0"
itertools = "0.9.0"