[package]
name = "bc_p2p"
version = "0.1.0"
authors = ["corihle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
libp2p = "0.22.0"
async-std = "1.6.2"
env_logger = "0.7.1"
chrono = "0.4.13"

# cit_manager
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.56"
anyhow = "1.0.31"
serde_derive = "1.0.114"
combinations = "0.1.0"
itertools = "0.9.0"